compiler/tests/fixtures/invalid/semantics/action_selector_targets_undefined_action.viv
// Invalid: action selector targets undefined action

action-selector pick:
    roles:
        @actor:
            as: initiator
    target randomly:
        nonexistent;
